--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body {
   font-size: 1.5em;
 }
 
+.paid-bill {
+  text-decoration: line-through;
+}
+
 #bills-container {
   margin: 0 auto;
   max-width: 900px;
