--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@ body {
   text-decoration: line-through;
 }
 
+.icon {
+  cursor: pointer;
+  user-select: none;
+}
+
 #bills-container {
   margin: 0 auto;
   max-width: 900px;
@@ -26,7 +31,7 @@ body {
 
 .bill-item {
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr;
+  grid-template-columns: 20px 3fr 1fr 1fr;
   border: 1px solid #E0E0E0;
   padding: 5px 10px;
   line-height: 1em;
