--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 .icon {
   cursor: pointer;
   user-select: none;
+  color: #4286f4;
 }
 
 /* General Styles */
@@ -46,7 +47,7 @@ body {
 
 .bill-item {
   display: grid;
-  grid-template-columns: 24px 3fr 1fr 1fr;
+  grid-template-columns: 24px 3fr 1fr 36px;
   padding: 5px;
   line-height: 1em;
   align-items: center;
@@ -63,10 +64,45 @@ body {
 
 .bill-cost {
   text-align: right;
+  margin-right: 20px;
+}
+
+.completed-container {
+  text-align: center;
 }
 
 .completed-input {
-  visibility: hidden;
+  display: none;
+}
+
+/* New Bill */
+.edit-bill-name {
+  display: inline-block;
+  width: 70%;
+}
+
+.edit-bill-cost {
+  display: inline-block;
+  width: 25%;
+  text-align: left;
+  margin-left: 15px;
+  margin-top: 10px;
+}
+
+.form-label {
+  display: inline-block;
+  color: #666;
+  margin:5px 0;
+  vertical-align: top;
+}
+
+.form-input {
+  display: block;
+  line-height: 1.3em;
+  width: 90%;
+  padding: 5px;
+  border: none;
+  border-bottom: 1px solid #999;
 }
 
 #button-add-bill {
@@ -74,14 +110,15 @@ body {
   cursor: pointer;
   padding: 10px 20px;
   background-color: white;
-  border: 1px solid #3F88C5;
-  color: #3F88C5;
+  border: 1px solid #4286f4;
+  color: #4286f4;
   font-size: 1.2em;
+  justify-self: center;
   margin: 20px auto;
   transition: all 0.2s ease-in-out;
 }
 
 #button-add-bill:hover {
-  background-color: #3F88C5;
+  background-color: #4286f4;
   color: white;
 }
